test_regress/t/t_flag_wpedantic_bad.out
%Error: t/t_flag_wpedantic_bad.v:8:8: syntax error, unexpected global
    8 |    reg global;
      |        ^~~~~~
%Error: Exiting due to
